# pre-commit-hooks

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VERSION  _typos.toml  pyproject.toml  requirements-dev.txt
pre-commit-hooks/: __init__.py
src/enable/pre-commit-hooks/: __init__.py
src/enable/pre_commit_hooks/: __init__.py  check_branch_name.py  check_commit_msg.py  check_poetry_toml.py  check_uv_toml.py
src/enabletechnologies/pre-commit-hooks/: __init__.py
src/pre-commit-hooks/: __init__.py
tests/: __init__.py  test_check_branch_name.py  test_check_commit_msg.py
