[project]
name = "enable_pre_commit_hooks"
version = "25.8.0"
description = "A project to contain all pre-commit hooks for enable technologies"
authors = [{ name = "Cloud Ops Admin", email = "cloudops@enable-technologies.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
keywords = [
    "precommit",
    "conventional",
    "commits",
    "git",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest-mock>=3.14.1,<4",
    "coverage>=7.10.4,<8",
    "ruff>=0.11.13,<0.12",
    "mypy>=1.17.1,<2",
    "typos>=1.35.4,<2",
]

[project.scripts]
check_commit_msg = "enable.pre_commit_hooks.check_commit_msg:main"
check_uv_toml = "enable.pre_commit_hooks.check_uv_toml:main"

[tool.commitizen]
version = "25.8.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "pyproject.toml:version",
  "src/enable/pre_commit_hooks/__init__.py",
  "VERSION"
]

[tool.hatch.build.targets.sdist]
include = ["src/enable"]

[tool.hatch.build.targets.wheel]
include = ["src/enable"]

[tool.hatch.build.targets.wheel.sources]
"src/enable" = "enable"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
# pycodestyle (E) pycodestyle warnings (W) pyflakes (F) flake8-bugbear (B) isort (I) pep8-naming (N) 
# flake8-quotes (Q) pydocstyle (D) Copyright-related rules (CPY) pyupgrade (UP) flake8-comprehensions (C4)
# Ruff-specific rules (RUF) Perflint (PERF) flake8-pytest-style (PT) implicit-namespace-package (INP001)
# flake8-todos (TD) flake8-blind-except (BLE) flake8-simplify (SIM)
lint.select = ["E", "W", "F", "B", "Q", "I", "N", "Q", "D", "C4", "CPY001", "RUF", "PERF", "PT", "INP001", "TD", "BLE", "SIM"]
lint.ignore = ["RUF012", "D205", "TD003", "SIM108"]
line-length = 140
preview = true

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-copyright]
author = "Enable Technologies Inc"
notice-rgx = "(?i)Copyright © \\d{4}"

[tool.mypy]
strict = true
mypy_path = ["src", "tests"]

[tool.coverage.run]
source = [ "src/enable" ]
relative_files = true
data_file = "coverage-reports/.coverage"

[tool.coverage.xml]
output = "coverage-reports/coverage.xml"

[tool.coverage.html]
directory = "coverage-reports/htmlcov"
